infrastructures/flux.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux
  namespace: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      name: flux
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      annotations:
        prometheus.io.port: "3031" # tell prometheus to scrape /metrics endpoint's port.
      labels:
        name: flux
    spec:
      serviceAccount: flux
      volumes:
        - name: git-key
          secret:
            secretName: flux-git-deploy
            defaultMode: 0400 # when mounted read-only, we won't be able to chmod

        # This is a tmpfs used for generating SSH keys. In K8s >= 1.10,
        # mounted secrets are read-only, so we need a separate volume we
        # can write to.
        - name: git-keygen
          emptyDir:
            medium: Memory

      containers:
        - name: flux
          # There are no ":latest" images for flux. Find the most recent
          # release or image version at https://quay.io/weaveworks/flux
          # and replace the tag here.
          image: weaveworks/flux:1.12.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3030 # informational
          volumeMounts:
            - name: git-key
              mountPath: /etc/fluxd/ssh # to match image's ~/.ssh/config
              readOnly: true # this will be the case perforce in K8s >=1.10
            - name: git-keygen
              mountPath: /var/fluxd/keygen # to match image's ~/.ssh/config
          args:

            # if you deployed memcached in a different namespace to flux,
            # or with a different service name, you can supply these
            # following two arguments to tell fluxd how to connect to it.
            # - --memcached-hostname=memcached.default.svc.cluster.local
            # - --memcached-service=memcached

            # this must be supplied, and be in the tmpfs (emptyDir)
            # mounted above, for K8s >= 1.10
            - --ssh-keygen-dir=/var/fluxd/keygen
            # replace (at least) the following URL
            - --git-url=git@github.com:byliuyang/gitops.git
            - --git-branch=master
            - --listen-metrics=:3031
            - --connect=ws://127.0.0.1:3032
        - name: fluxcloud
          image: justinbarrick/fluxcloud:v0.3.9
          imagePullPolicy: Always
          ports:
            - containerPort: 3032
