infrastructures/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
            - name: certs
              mountPath: /var/lib/postgresql/certs
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres
        - name: certs
          secret:
            secretName: short-d.com-tls
            items:
              - key: tls.crt
                path: server.crt
              - key: tls.key
                path: server.key
---
apiVersion: v1
kind: Service
metadata:
  namespace: db
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 7400
      targetPort: 5432
  type: LoadBalancer
