infrastructures/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: ingress
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress
  template:
    metadata:
      labels:
        app: traefik-ingress
        name: traefik-ingress
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v1.7.24
          name: traefik-ingress
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: admin
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --defaultentrypoints=http,https
            - --entrypoints=Name:https Address::443 TLS
            - --entrypoints=Name:http Address::80
            - --insecureskipverify
            - --api
            - --kubernetes
            - --logLevel=INFO
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-ui
  namespace: ingress
spec:
  selector:
    app: traefik-ingress
  ports:
    - name: web
      port: 8080
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-admin-ui
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
    - hosts:
        - ingress.short-d.com
      secretName: short-d.com-tls
  rules:
    - host: ingress.short-d.com
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-admin-ui
              servicePort: web
