infrastructures/keel.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "keel"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
  namespace: keel
  labels:
    app: keel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keel
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: keel
    spec:
      serviceAccountName: keel
      containers:
        - name: keel
          # Note that we use appVersion to get images tag.
          image: "keelhq/keel:latest"
          imagePullPolicy: Always
          command: ["/bin/keel"]
          ports:
            - containerPort: 9300
          livenessProbe:
            httpGet:
              path: /health
              port: 9300
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: "keel"
  labels:
    app: keel
spec:
  ports:
    - port: 9300
      name: keel
  selector:
    app: keel
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: keel
  name: keel
spec:
  tls:
    - hosts:
        - deploy.short-d.com
      secretName: short-d.com-tls
  rules:
    - host: deploy.short-d.com
      http:
        paths:
          - backend:
              serviceName: keel
              servicePort: 9300
